# cmake-test3

./: CMakeLists.txt
src/: CMakeLists.txt  a.out  prog.cpp
